20030914
 - (dtucker) [Makefile regress/Makefile] Fix portability issues preventing
   the regression tests from running with Solaris' make.  Patch from Brian
   Poole (raj at cerias.purdue.edu).
 - (dtucker) [regress/Makefile] AIX's make doesn't like " +=", so replace
   with vanilla "=".

20030913
 - (dtucker) [regress/agent-timeout.sh] Timeout of 5 sec is borderline for
   slower hosts, increase to 10 sec.
 - (dtucker) [auth-passwd.c] On AIX, call setauthdb() before loginsuccess(),
   required to correctly reset failed login count when using a password
   registry other than "files" (eg LDAP, see bug #543).
 - (tim) [configure.ac] define WITH_ABBREV_NO_TTY for SCO.
   Report by Roger Cornelius.
 - (dtucker) [auth-pam.c] Use SSHD_PAM_SERVICE for PAM service name, patch
   from cjwatson at debian.org.

20030912
 - (tim) [regress/agent-ptrace.sh] sh doesn't like "if ! shell_function; then".
 - (tim) [Makefile.in] only mkdir regress if it does not exist.
 - (tim) [regress/yes-head.sh] shell portability fix.

20030911
 - (dtucker) [configure.ac] Bug #588, #615: Move other libgen tests to after
   the dirname test, to allow a broken dirname to be detected correctly.
   Based partially on patch supplied by alex.kiernan at thus.net.  ok djm@
 - (tim) [configure.ac] Move libgen tests to before libwrap to unbreak
   UnixWare 2.03 using --with-tcp-wrappers.
 - (tim) [configure.ac] Prefer setuid/setgid on UnixWare and Open Server.
 - (tim) [regress/agent-ptrace.sh regress/dynamic-forward.sh
   regress/sftp-cmds.sh regress/stderr-after-eof.sh regress/test-exec.sh]
   no longer depends on which(1). patch by dtucker@

20030910
 - (dtucker) [configure.ac] Bug #636: Add support for Cray's new X1 machine.
   Patch from wendyp at cray.com.
 - (dtucker) [configure.ac] Part of bug #615: tcsendbreak might be a macro.
 - (dtucker) [regressh/yes-head.sh] Some platforms (eg Solaris) don't have
   "yes".

20030909
 - (tim) [regress/Makefile] Fixes for building outside of a read-only